tests/NormalTests/paczka1/small_fuzzy/13603346.err
Error in line 8: AMBe1k3jvA A889 58,5
Error in line 11: AEd8J S993 78,1
